<resources>
    <string name="app_name">MyApp1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="Temperature">Temperature</string>
    <string name="btn">Change</string>
    <string name="hello">hello</string>
    <string name="teamname1">team A</string>
    <string name="score1">+1 POINT</string>
    <string name="score2">+2 POINTS</string>
    <string name="score3">+3 POINTS</string>
    <string name="zero">reset</string>
    <string name="input_tip">Input</string>
    <string name="hello_label">Hello</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="score_label">0</string>
    <string name="scoreb_label">0</string>
    <string name="reset_btn">reset</string>
    <string name="Home">Home</string>
    <string name="teamname2">teamB</string>
    <string name="exchange">exchange</string>
    <string name="yes">yes</string>
    <string name="config_btn">config</string>
    <string name="Item">Item</string>
    <string name="hello_fragment">Hello fragment</string>
    <string name="page1">Page1</string>
    <string name="page2">Page2</string>
    <string name="page3">Page3</string>
    <string name="settings_title">setting</string>
    <string name="setting">setting</string>
    <string name="lab_approve">approve</string>
    <string name="lab_object">object</string>
    <string name="lab_abstain">abstain</string>

    <!-- 控件标签 -->
    <string name="set_switch1_label">switch</string>
    <string name="set_list_label">list</string>

    <!-- 控件ID -->
    <string name="set_switch1_key">set_switch1</string>
    <string name="set_checkbox1_key">set_checkbox1</string>
    <string name="set_list_key">set_list</string>
    <string name="set_text1_key">set_text1</string>
    <string name="set_text2_key">set_text2</string>
    <string name="set_checkbox1_label">checkbox</string>
    <string name="set_text1_label">text1</string>
    <string name="set_text2_label">text2</string>
    <string name="set_group1_label">group1</string>
    <string name="set_group2_label">group2</string>

</resources>