<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_tip"
            android:autofillHints="number"
            android:inputType="number"
            android:id="@+id/calc_input"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/hello_label" />

        <Button
            android:id="@+id/btn_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_dollar_label"
            android:onClick="exchange" />

        <Button
            android:id="@+id/btn_euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_euro_label"
            android:onClick="exchange" />

        <Button
            android:id="@+id/btn_won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_won_label"
            android:onClick="exchange" />

        <Button
            android:id="@+id/btn_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/config_btn"
            android:onClick="openConfig" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>